src/test/ui/issue-35675.stderr
error[E0412]: cannot find type `Apple` in this scope
  --> $DIR/issue-35675.rs:18:29
   |
18 | fn should_return_fruit() -> Apple {
   |                             ^^^^^
   |                             |
   |                             not found in this scope
   |                             help: you can try using the variant's enum: `Fruit`

error[E0425]: cannot find function `Apple` in this scope
  --> $DIR/issue-35675.rs:22:5
   |
22 |     Apple(5)
   |     ^^^^^ not found in this scope
help: possible candidate is found in another module, you can import it into scope
   |
12 | use Fruit::Apple;
   |

error[E0573]: expected type, found variant `Fruit::Apple`
  --> $DIR/issue-35675.rs:27:33
   |
27 | fn should_return_fruit_too() -> Fruit::Apple {
   |                                 ^^^^^^^^^^^^
   |                                 |
   |                                 not a type
   |                                 help: you can try using the variant's enum: `Fruit`

error[E0425]: cannot find function `Apple` in this scope
  --> $DIR/issue-35675.rs:31:5
   |
31 |     Apple(5)
   |     ^^^^^ not found in this scope
help: possible candidate is found in another module, you can import it into scope
   |
12 | use Fruit::Apple;
   |

error[E0573]: expected type, found variant `Ok`
  --> $DIR/issue-35675.rs:36:13
   |
36 | fn foo() -> Ok {
   |             ^^ not a type
   |
   = help: there is an enum variant `std::prelude::v1::Ok`, try using `std::prelude::v1`?
   = help: there is an enum variant `std::result::Result::Ok`, try using `std::result::Result`?

error[E0412]: cannot find type `Variant3` in this scope
  --> $DIR/issue-35675.rs:44:13
   |
44 | fn bar() -> Variant3 {
   |             ^^^^^^^^
   |             |
   |             not found in this scope
   |             help: you can try using the variant's enum: `x::Enum`

error[E0573]: expected type, found variant `Some`
  --> $DIR/issue-35675.rs:50:13
   |
50 | fn qux() -> Some {
   |             ^^^^ not a type
   |
   = help: there is an enum variant `std::prelude::v1::Option::Some`, try using `std::prelude::v1::Option`?
   = help: there is an enum variant `std::prelude::v1::Some`, try using `std::prelude::v1`?

error: aborting due to 7 previous errors

